[package]
name = "kissat-rs"
version = "0.1.3"
description = "High-level Rust bindings for the Kissat SAT solver."
license = "MIT"
repository = "https://github.com/firefighterduck/kissat-rs"
edition = "2021"
readme = "README.md"
categories = ["api-bindings"]

[dependencies]
kissat-sys = { path = "./kissat-sys", version = "0.1.3" }

derive-try-from-primitive = "1.0.0"
thiserror = "1.0.63"
