[package]
name = "kissat-rs"
version = "1.0.0"
description = "High-level Rust bindings for the Kissat SAT solver."
license = "MIT"
repository = "https://github.com/firefighterduck/kissat-rs"
edition = "2024"
readme = "README.md"
categories = ["api-bindings"]

[dependencies]
kissat-sys = { path = "./kissat-sys", version = "0.1.3" }

derive-try-from-primitive = "1.0.0"
thiserror = "2.0.11"
derive_more = { version = "2.0.1", features = ["debug"] }
