[package]
name = "kissat-sys"
version = "0.1.2"
description = " Low-level Rust bindings for the Kissat SAT solver."
license = "MIT"
repository = "https://github.com/firefighterduck/kissat-rs"
edition = "2021"
readme = "README.md"
categories = ["external-ffi-bindings"]

[build-dependencies]
bindgen = "0.69.4"
