[package]
name = "kissat-sys"
version = "0.1.4"
description = "Low-level Rust bindings for the Kissat SAT solver."
license = "MIT"
repository = "https://github.com/firefighterduck/kissat-rs"
edition = "2024"
readme = "README.md"
categories = ["external-ffi-bindings"]

[build-dependencies]
bindgen = "0.71.1"
